--- a/app/src/main/res/layout/activity_food_detail.xml
+++ b/app/src/main/res/layout/activity_food_detail.xml
@@ -5,6 +5,7 @@
     android:id="@+id/top_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".FoodDetailActivity">
 
     <RelativeLayout
@@ -28,8 +29,8 @@
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_alignParentTop="true"
-            android:layout_marginTop="180dp"
             android:layout_marginEnd="16dp"
+            android:layout_marginTop="180dp"
             android:background="@drawable/ic_action_star_empty" />
 
         <TextView
@@ -38,13 +39,96 @@
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
+            android:layout_marginBottom="16dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="180dp"
-            android:layout_marginBottom="16dp"
             android:text="@string/food_name"
             android:textColor="@android:color/background_light"
             android:textSize="30sp" />
 
     </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/detail_middle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+
+        <LinearLayout
+            android:id="@+id/detail_food_description"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/detail_food_cat"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="16dp"
+                android:text="种类"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/detail_food_nutrition"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="16dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="5dp"
+                android:text="富含 成分"
+                android:textSize="18sp" />
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/detail_line_beside_description"
+            android:layout_width="3dp"
+            android:layout_height="75dp"
+            android:layout_marginBottom="3dp"
+            android:layout_marginLeft="180dp"
+            android:layout_marginTop="3dp"
+            android:layout_toRightOf="@id/detail_food_description"
+            android:background="@color/colorGray" />
+
+        <ImageButton
+            android:id="@+id/detail_shoppling_cart"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="24dp"
+            android:layout_marginTop="24dp"
+            android:layout_toRightOf="@id/detail_line_beside_description"
+            android:background="@drawable/ic_action_shopping_cart" />
+
+
+    </RelativeLayout>
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:id="@+id/detail_bottom"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp">
+
+        <TextView
+            android:id="@+id/detail_more_info"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="更多信息"
+            android:layout_marginLeft="16dp"
+            android:layout_marginBottom="16dp"
+            android:textSize="30sp"/>
+
+    </LinearLayout>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="4dp"
+        android:background="@color/colorLessGray"/>
+
+    <ListView
+        android:id="@+id/detail_functions"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
