--- a/app/src/main/res/layout/activity_food_detail.xml
+++ b/app/src/main/res/layout/activity_food_detail.xml
@@ -20,6 +20,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
+            android:layout_marginTop="16dp"
             android:layout_marginStart="16dp"
             android:background="@drawable/ic_action_back" />
 
@@ -30,7 +31,7 @@
             android:layout_alignParentEnd="true"
             android:layout_alignParentTop="true"
             android:layout_marginEnd="16dp"
-            android:layout_marginTop="180dp"
+            android:layout_marginTop="184dp"
             android:background="@drawable/ic_action_star_empty" />
 
         <TextView
@@ -56,7 +57,7 @@
 
         <LinearLayout
             android:id="@+id/detail_food_description"
-            android:layout_width="100dp"
+            android:layout_width="160dp"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
@@ -71,7 +72,7 @@
 
             <TextView
                 android:id="@+id/detail_food_nutrition"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="16dp"
                 android:layout_marginLeft="16dp"
@@ -86,7 +87,7 @@
             android:layout_width="3dp"
             android:layout_height="75dp"
             android:layout_marginBottom="3dp"
-            android:layout_marginLeft="180dp"
+            android:layout_marginLeft="120dp"
             android:layout_marginTop="3dp"
             android:layout_toRightOf="@id/detail_food_description"
             android:background="@color/colorGray" />
