--- a/app/src/main/res/layout/food_widget.xml
+++ b/app/src/main/res/layout/food_widget.xml
@@ -1,15 +1,17 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#09C"
+    android:background="@android:color/transparent"
     android:padding="@dimen/widget_margin">
 
     <ImageView
         android:id="@+id/widget_food_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
-        android:src="@drawable/ic_action_starred"/>
+        android:layout_marginStart="44dp"
+        android:src="@drawable/ic_action_starred" />
 
     <TextView
         android:id="@+id/widget_food_text"
@@ -18,7 +20,6 @@
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:layout_margin="8dp"
-        android:background="#09C"
         android:contentDescription="@string/appwidget_text"
         android:text="@string/appwidget_text_dummy"
         android:textColor="#ffffff"
